2013-10-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/tc-arm.c (do_t_mvn_tst): Use narrow form for tst when
	possible.

2013-09-30  Saravanan Ekanathan <saravanan.ekanathan@amd.com>

	* config/tc-i386.c (cpu_arch): Add CPU_BDVER4_FLAGS.
	* doc/c-i386.texi: Add -march=bdver4 option.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.24.

2013-09-18  Nick Clifton  <nickc@redhat.com>

	* config/tc-msp430.c (OPTION_MOVE_DATA): Define.
	(move_data): New variable.
	(md_parse_option): Parse -md.
	(msp430_section): New function.  Catch references to the .bss or
	.data sections and generate a special symbol for use by the libcrt
	library.
	(md_pseudo_table): Intercept .section directives.
	(md_longopt): Add -md
	(md_show_usage): Likewise.
	(msp430_operands): Generate a warning message if a NOP is inserted
	into the instruction stream.
	* doc/c-msp430.texi (node MSP430 Options): Document -md option.

2013-09-17  Doug Gilmore  <Doug.Gilmore@imgtec.com>

	* config/tc-mips.c (mips_elf_final_processing): Set
	EF_MIPS_FP64 for -mgp32 -mfp64, removing old FIXME.

2013-09-16  Will Newton  <will.newton@linaro.org>

	* config/tc-arm.c (do_neon_ld_st_interleave): Add constraint
	disallowing element size 64 with interleave other than 1.

2013-09-12  Chao-ying Fu  <Chao-ying.Fu@imgtec.com>

	* config/tc-mips.c (match_insn): Set error when $31 is used for
	bltzal* and bgezal*.

2013-09-04  Tristan Gingold  <gingold@adacore.com>

	* config/tc-ppc.c (md_apply_fix): Handle defined after use toc
	symbols.

2013-09-04  Roland McGrath  <mcgrathr@google.com>

	PR gas/15914
	* config/tc-arm.c (T16_32_TAB): Add _udf.
	(do_t_udf): New function.
	(insns): Add "udf".

2013-08-23  Sandeep Kumar Singh  <Sandeep.Singh2@kpitcummins.com>

	* config/rx-parse.y: Rearrange the components of a bison grammar to issue
	assembler errors at correct position.

2013-08-23  Yuri Chornoivan  <yurchor@ukr.net>