@@ -1,0 +1,3 @@
+#name: Diagnostics Quality
+#source: bad.s
+#error-output: bad.l
