@@ -1,0 +1,7 @@
+[^:]*: Assembler messages:
+[^:]*:6: Error: unrecognised instruction size modifier .z
+[^:]*:7: Error: junk found after instruction: mov.bc r1,r2
+[^:]*:8: Error: junk found after instruction: mov.cd r1,r2
+[^:]*:9: Error: junk found after instruction: mov.cd r1,r2
+[^:]*:10: Warning: no size modifier after period, .w assumed
+[^:]*:11: Error: instruction bis.a does not exist
